// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawMinions() should return 1 minion 1`] = `
Array [
  Object {
    "id": "card6",
  },
]
`;

exports[`drawMinions() should return 3 minions 1`] = `
Array [
  Object {
    "id": "card6",
  },
  Object {
    "id": "card1",
  },
  Object {
    "id": "card5",
  },
]
`;
